--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       30/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 419 points<br>
+Unlocked       30/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 428 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -88,6 +88,7 @@ Unlocked       30/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Author (Level 9)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Carpenter (Level        1)</div>  <div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Product Manager (Level 10)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Product Manager (Level 8)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -113,22 +114,22 @@ Unlocked       30/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-50530 rev-parse
-3116 config
-1858 stash
-1416 status
- 726 commit
- 593 push
- 490 add
- 356 checkout
- 236 diff
- 217 log
+50810 rev-parse
+3384 config
+1878 stash
+1454 status
+ 742 commit
+ 608 push
+ 516 add
+ 361 checkout
+ 261 diff
+ 233 log
  170 branch
  147 remote
- 128 pull
-  85 clone
-  68 rebase
-  64 reset
+ 138 pull
+  86 clone
+  70 rebase
+  66 reset
   61 rm
   45 merge
   37 fetch
@@ -137,7 +138,7 @@ Git commands sorted by usage:
   22 clean
   17 achievements
   15 gc
-  11 show
+  12 show
   11 flow
    8 submodule
    8 cherry-pick
